[gd_scene load_steps=3 format=3 uid="uid://dm4xf70156tbg"]

[ext_resource type="Texture2D" uid="uid://c46wnqasy61e7" path="res://assets/test foncage.png" id="1_jdv7j"]
[ext_resource type="Script" uid="uid://bawr8s48f3k0w" path="res://script/UI/hoverlay_place_possible.gd" id="2_mngjm"]

[node name="hoverlayPlacePossible" type="TextureButton"]
offset_left = -80.0
offset_top = -110.0
offset_right = 80.0
offset_bottom = 110.0
size_flags_horizontal = 4
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("1_jdv7j")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_mngjm")

[node name="cardPreview" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.490196)
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -100.0
offset_right = 70.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
